# ATC-system

./: .aider.chat.history.md  .aider.input.history  .gitignore  CMakeLists.txt  README.md  output.txt  project_description.txt  qnx-toolchain.cmake  test_data.csv
.aider.tags.cache.v3/: cache.db
.github/ISSUE_TEMPLATE/: story.md
include/common/: aircraft_types.h  constants.h  history_logger.h  logger.h  periodic_task.h  types.h  warning_level.h
include/communication/: channel.h  message_types.h  qnx_channel.h
include/core/: aircraft.h  control_computer.h  main_system.h  radar_system.h  violation_detector.h
include/display/: display_system.h
include/operator/: command.h  console.h
include/sim/: aircraft.h  channel_manager.h
src/: main.cpp  main_system.cpp
src/common/: constants.cpp  history_logger.cpp  logger.cpp
src/communication/: qnx_channel.cpp
src/core/: aircraft.cpp  control_computer.cpp  radar_system.cpp  violation_detector.cpp
src/display/: display_system.cpp
src/operator/: command.cpp  console.cpp
src/sim/: aircraft.cpp  channel_manager.cpp
test/: CMakeLists.txt  mock_channel.h  test_main.cpp
test/core/: aircraft_test.cpp  radar_test.cpp  violation_detector_test.cpp
test/display/: display_test.cpp
test/integration/: system_test.cpp
test/operator/: console_test.cpp
test/perf/: perf_test.cpp
test/sim/: sim_test.cpp
